Aplicación de CEO

--- a/scss/layout/media/_media768.scss
+++ b/scss/layout/media/_media768.scss
@@ -5,3 +5,10 @@
         }
     }
 }
+@media (max-width: 768px){
+    .novedades-html{
+        .novedades{
+            @include flex5(column, center)
+        }
+    }
+}
